manifests/kustomize/overlays/production/limits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commence-fe
  labels:
    app: e-commence-fe
spec:
  template:
    spec:
      containers:
        - name: e-commence-fe
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
