manifests/kustomize/overlays/production/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-commence-fe
spec:
  replicas: 1
