manifests/kustomize/overlays/production/ingress-http-cors-patch.yaml
# https://higress.cn/docs/latest/user/annotation-use-case/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commence-fe-ingress
  annotations:
    # 重定向至HTTPS
    higress.io/force-ssl-redirect: "true"
    #  round_robin：基于轮询的负载均衡。
    # least_conn：基于最小请求数的负载均衡。
    # random：基于随机的负载均衡。
    higress.io/load-balance: "least_conn"
    # 重试
    ## 请求的最大重试次数
    higress.io/proxy-next-upstream-tries: "3"
    ## 重试超时时间为5s
    higress.io/proxy-next-upstream-timeout: "4"
    ## 请求重试条件: 只有在响应状态码为502才重试，并且开启非幂等重试
    higress.io/proxy-next-upstream: "http_502,non_idempotent"
